# jsonplaceholder

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: django-test-ci.yml
src/: manage.py
src/api/: admin.py  models.py
src/api/api_v1/: serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_comment_post.py
src/placeholder/: asgi.py  settings.py  urls.py  wsgi.py
